Added (Alt) attribute to images

--- a/AITrainingSpecialist.html
+++ b/AITrainingSpecialist.html
@@ -74,7 +74,7 @@
 									<h1 data-i18n="AiTrainingSpecialist"></h1>
 									<p data-i18n="FirstArticle"></p>
 								</header>
-								<div class="image main"><img src="images/ai-training.jpg" alt="" /></div>
+								<div class="image main"><img src="images/ai-training.jpg" alt="AI Training Specialist" /></div>
 								<p data-i18n="SecondArticle"></p>
 							</section>
 
