--- a/ImageProcessing.html
+++ b/ImageProcessing.html
@@ -76,7 +76,7 @@
 									<h1 data-i18n="ImageProcessing"></h1>
 									<p data-i18n="FirstArticle"></p>
 								</header>
-								<div class="image main"><img src="images/ImageProcessing.png" alt="" /></div>
+								<div class="image main"><img src="images/ImageProcessing.png" alt="Image Processing" /></div>
 								<p data-i18n="SecondArticle"></p>
 							</section>
 
