--- a/Robotics.html
+++ b/Robotics.html
@@ -94,7 +94,7 @@
 									<h1 data-i18n="Robotics"></h1>
 									<p data-i18n="FirstArticle"></p>
 								</header>
-								<div class="image main"><img src="images/robotics.jpg" alt="" /></div>
+								<div class="image main"><img src="images/robotics.jpg" alt="Robotics" /></div>
 								<p data-i18n="SecondArticle"></p>
 									 <p data-i18n="Demo1"></p>
 									 <div class="video-container">
