--- a/SMARTAGE.html
+++ b/SMARTAGE.html
@@ -76,7 +76,7 @@
 									<h1 data-i18n="SMARTAGE"></h1>
 									<p data-i18n="FirstArticle"></p>
 								</header>
-								<div class="image main"><img src="images/SMARTAGE_Image.png" alt="" /></div>
+								<div class="image main"><img src="images/SMARTAGE_Image.png" alt="SMARTAGE" /></div>
 								<p data-i18n="SecondArticle"></p>
 									<p><a href="https://www.linkedin.com/posts/isibor-kennedy-ihianle-phd-mbcs-fhea-769a288_activityrecognition-ai-ntu-ugcPost-7205867165407703040-5HeN?utm_source=share&utm_medium=member_desktop" target="_blank"><b style="color: white;">Smartage Demo</b></a></p>
 							</section>
