--- a/TurkishTextSummarizer.html
+++ b/TurkishTextSummarizer.html
@@ -75,7 +75,7 @@
 									<h1 data-i18n="TurkishTextSummarizer"></h1>
 									<p data-i18n="FirstArticle"></p>
 								</header>
-								<div class="image main"><img src="images/NLP.png" alt="" /></div>
+								<div class="image main"><img src="images/NLP.png" alt="Natural Language Processing" /></div>
 								<p data-i18n="SecondArticle"></p>
 								<p><a href="https://github.com/B7SJuba/TurkishTextSummarizer" target="_blank"><b style="color: white;">Turkish Text Summarizer repository</b></a></p>
 							</section>
