--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
+						<!-- Featured Post AI Training Specialist -->
 							<article class="post featured">
 								<header class="major">
 									<span class="date" data-i18n="AiTrainingDate"></span>
 									<h2 data-i18n="AiTrainingSpecialist"></h2>
 									<p data-i18n="AiTrainingAbout"></p>
 								</header>
-								<a class="image main"><img src="images/ai-training.jpg" alt="" /></a>
+								<a class="image main"><img src="images/ai-training.jpg" alt="AI Training Specialist" /></a>
 								<ul class="actions special">
 									<li><a href="AITrainingSpecialist" class="button large" data-i18n="View"></a></li>
 								</ul>
@@ -104,51 +104,58 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- SMARTAGE -->
 								<article>
 									<header>
 										<span class="date" data-i18n="SmartageDate"></span>
 										<h2 data-i18n="SMARTAGE"></h2>
 									</header>
-									<a  class="image fit"><img src="images/SMARTAGE_Image.png" alt="" /></a>
+									<a  class="image fit"><img src="images/SMARTAGE_Image.png" alt="SMARTAGE" /></a>
 									<p data-i18n="SmartageAbout"></p>
 								<ul class="actions special">
 										<li><a href="SMARTAGE" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
+
+								<!-- Turkish Text Summarizer -->
 								<article>
 									<header>
 										<span class="date" data-i18n="TurkishTextSummarizerDate"></span>
 										<h2 data-i18n="TurkishTextSummarizer"></h2>
 									</header>
-									<a class="image fit"><img src="images/NLP.png" alt="" /></a>
+									<a class="image fit"><img src="images/NLP.png" alt="Natural Language Processing" /></a>
 									<p data-i18n="TurkishTextSummarizerAbout"></p>
 									<ul class="actions special">
 										<li><a href="TurkishTextSummarizer" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
+
+								<!-- Image Processing -->
 								<article>
 									<header>
 										<span class="date" data-i18n="ImageProcessingDate"></span>
 										<h2 data-i18n="ImageProcessing"></h2>
 									</header>
-									<a class="image fit"><img src="images/ImageProcessing.png" alt="" /></a>
+									<a class="image fit"><img src="images/ImageProcessing.png" alt="Image Processing" /></a>
 									<p data-i18n="ImageProcessingAbout"></p>
 									<ul class="actions special">
 										<li><a href="ImageProcessing" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
+
+								<!-- Robotics -->
 								<article>
 									<header>
 										<span class="date" data-i18n="RoboticsDate"></span>
 										<h2 data-i18n="Robotics"></h2>
 									</header>
-									<a class="image fit"><img src="images/robotics.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/robotics.jpg" alt="Robotics" /></a>
 									<p data-i18n="RoboticsAbout"></p>
 									<ul class="actions special">
 										<li><a href="Robotics" class="button" data-i18n="ViewProject"></a></li>
 									</ul>
 								</article>
-												</section>
+							</section>
 
 						<!-- Footer -->
 							<footer>
