--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title data-i18n="title"></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="" data-i18n="metaDescription">
+		<meta name="keywords" content="" data-i18n="metaKeywords">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
 		<link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
