--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
 				}
 				// Typing effect for the header part
 				  function runTypingEffect(lang) {
-				let txt = "Haider Khalaf";
-				if (lang === "ar") txt = "حيدر خلف";
+				let txt = "Haider Arrak Khalaf";
+				if (lang === "ar") txt = "حيدر عراك خلف";
 
 				const headerEl = document.getElementById("myHeader");
 				headerEl.innerHTML = ""; // Clear previous text
