--- a/SMARTAGE.html
+++ b/SMARTAGE.html
@@ -76,7 +76,21 @@
 									<h1 data-i18n="SMARTAGE"></h1>
 									<p data-i18n="FirstArticle"></p>
 								</header>
-								<div class="image main"><img src="images/SMARTAGE_Image.png" alt="SMARTAGE" /></div>
+								<div class="image main">
+									<video autoplay loop muted playsinline 
+										class="article-thumb"
+										poster="images/SMARTAGE_Image.png">
+										
+										<!-- highest quality + best compression -->
+										<source src="images/SMARTAGE.webm" type="video/webm">
+
+										<!-- secondary fallback (Safari, older iOS) -->
+										<source src="images/SMARTAGE.mp4" type="video/mp4">
+
+										<!-- absolute fallback if video is unsupported -->
+										<img src="images/SMARTAGE_Image.png" alt="SMARTAGE">
+									</video>
+								</div>
 								<p data-i18n="SecondArticle"></p>
 									<p><a href="https://www.linkedin.com/posts/isibor-kennedy-ihianle-phd-mbcs-fhea-769a288_activityrecognition-ai-ntu-ugcPost-7205867165407703040-5HeN?utm_source=share&utm_medium=member_desktop" target="_blank"><b style="color: white;">Smartage Demo</b></a></p>
 							</section>
@@ -256,6 +270,40 @@
 				} else {
 					showFallback();
 				}
+				});
+			</script>
+			
+			<script>
+				// Script to pause post videos when not visible to the viewer
+				document.addEventListener("DOMContentLoaded", () => {
+				const videos = document.querySelectorAll(".article-thumb");
+
+				// Observer options: video must be at least 50% visible to play
+				const observerOptions = {
+					root: null,           // viewport
+					threshold: 0.5        // 50% visibility required
+				};
+
+				const observer = new IntersectionObserver((entries) => {
+					entries.forEach(entry => {
+					const video = entry.target;
+
+					if (entry.isIntersecting) {
+						// Try to play when visible
+						const playAttempt = video.play();
+						if (playAttempt !== undefined) {
+						playAttempt.catch(() => {
+							// Autoplay blocked → do nothing
+						});
+						}
+					} else {
+						// Pause when off screen
+						video.pause();
+					}
+					});
+				}, observerOptions);
+
+				videos.forEach(video => observer.observe(video));
 				});
 			</script>
 
