--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 					{
 					"@type": "Person",
 					"@id": "https://haiderkhalaf.com/#person",
-					"name": "Haider Arrak Khalaf",
+					"name": [
+						 { "@language: "en", "@value": "Haider Arrak Khalaf" },
+						 { "@language: "ar", "@value": "حيدر عراك خلف"},
+						 { "@language: "tr", "@value": "Haider Arrak Khalaf" }
+					],
 					"jobTitle": [
 						{ "@language": "en", "@value": "Junior Computer Engineer" },
 						{ "@language": "ar", "@value": "مهندس كمبيوتر" },
